fix loader in dark mode

--- a/src/styles/loader.scss
+++ b/src/styles/loader.scss
@@ -28,6 +28,11 @@
   border-radius: 20%;
   background: $black;
 }
+
+.dark .lds-spinner div:after {
+  background: $white;
+}
+
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
   animation-delay: -1.1s;
@@ -81,6 +86,11 @@
   font-size: 0.85em;
   color: $grey;
 }
+
+.dark .loader-text {
+  color: $white;
+}
+
 @keyframes lds-spinner {
   0% {
     opacity: 1;
